# temos

./: .gitignore  ART-EVAL-PLDI22-README.txt  Cargo.toml  HEAD~1  INSTALL.md  LICENSE  Makefile  README.md  cvc4  dummy.smt2  fifo.tsl  foo  foo.sl  foo.smt2  foo.txt  install.sh  preempt.tsl  samples.txt  setup.sh  setup2.sh  strix_tlsf.sh  tags  temos.sh  tmp-hack-1170185483.tsl  tmp-hack-1173023529.tsl  tmp-hack-1202371322.tsl  tmp-hack-1260988574.tsl  tmp-hack-1290167078.tsl  tmp-hack-1359517053.tsl  tmp-hack-1384682006.tsl  tmp-hack-1447272137.tsl  tmp-hack-1477050296.tsl  tmp-hack-1500265705.tsl  tmp-hack-1568353926.tsl  tmp-hack-1572930595  tmp-hack-1671134712.tsl  tmp-hack-169991778.tsl  tmp-hack-1758636281.tsl  tmp-hack-1773834199.tsl  tmp-hack-1785184852.tsl  (+70 more)
automatic/: automatic.json  oracle.tsl
benchmarks/: Makefile  bc_streamos.tsl  bouncing_counter.tsl  dao.tsl  linux_cfs.tsl  music.tsl  pong.tsl  slider_scored.tsl  synth_tsl.sh  torcs.tsl  tsl_to_js.sh
decomp/: pom.xml
dev/: counter.sl  cps.sl  cps_iterative.tsl  dummy.sl  elevator.tsl  example.out  sorting.tsl  sorting2.tsl
docs/: index.md
examples/: alphaTest.tslmt  cfs.c  cfs.tslmt  mini_test.tslmt  regTsl.tslmt
parser/: Makefile  Parser.java
research/: cps.py
src/: FIXME  assumption.rs  consistency.rs  cvc4.rs  dto.rs  examples.rs  hoare.rs  lia.rs  main.rs  parser.rs  predicate.rs  sample.rs  specification.rs  sygus.rs  tests.rs  tsl.rs  tsl_lia.rs  types.rs  utils.rs
tsllia-synthesis/: Cargo.toml
utils/: csv_gen.py  docker.sh  eval_all.py  min_realizable.sh  time.sh  timer.py
(+128 files in other folders)
